...
        return CustomTextInput(
          icon: Icon(
            Icons.lock_outline,
            color: Colors.grey.shade400,
          ),
          child: TextField(
            key: const Key('loginForm_usernameInput_textField'),
            onChanged: (username) =>
                context.read<LoginBloc>().add(LoginUsernameChanged(username)),
            decoration: InputDecoration(
              border: InputBorder.none,
              labelText: locale.username,
              errorText: state.username.invalid ? 'invalid username' : null,
...
        return CustomTextInput(
          icon: Icon(
            Icons.mail_outline,
            color: Colors.grey.shade400,
          ),
          child: TextField(
            key: const Key('loginForm_passwordInput_textField'),
            onChanged: (password) =>
                context.read<LoginBloc>().add(LoginPasswordChanged(password)),
            obscureText: true,
            decoration: InputDecoration(
              border: InputBorder.none,
              labelText: locale.password,
...
