...
                : widget.enableColor,
          ),
          //switch
          child: Stack(children: [
            if (widget.leftText != null && widget.value)
              Container(
                  key: const Key('Switch_value_is_true'),
                  alignment: Alignment.centerLeft,
                  padding: const EdgeInsets.only(left: 10),
                  child: Text(widget.leftText!)),
            if (widget.rightText != null && !widget.value)
              Container(
                  key: const Key("Switch_value_is_false"),
...
