...
                        Text(locale.support)
                      ],
                    ),
                    BlocBuilder<LanguageBloc, LanguageState>(
                      builder: (context, state) {
                        return CustomSwitch(
                          key: const Key("LanguageSwitch"),
                          value: languageVI,
                          onChanged: (val) {
                            setState(() {
                              languageVI = val;
                            });

...
